--- a/style.css
+++ b/style.css
@@ -461,6 +461,9 @@ section {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 30px;
     margin-top: 2rem;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto
 }
 
 /* Página de Habilidades e Currículo */
